cluster/apps/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: dashboard-ingress
  namespace: default
spec:
  ingressClassName: "nginx"
  rules:
  - host: dashboard.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443
  tls:
  - hosts:
    - "dashboard.${SECRET_DOMAIN}"
    secretName: dashboard-tls
