cluster/apps/dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: dashboard-ingress
  namespace: kube-system
spec:
  tls:
  - hosts: 
    - "dashboard.${SECRET_DOMAIN}"
    secretName: wildcard-cert-tls
  ingressClassName: "nginx"
  rules:
  - host: dashboard.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443
